# python-redfish

./: .coveragerc  .gitignore  .gitreview  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  groups  install.sh  openstack-common.conf  project.config  pytest.ini  python-redfish.spec  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
dmtf/: DSP8011_1.0.0a.json  Dockerfile  README.rst  buildImage.sh  fix_manager_ei.patch  moonshot_data_model_reference.html  redfish-setup.sh  run-redfish-ctn.sh  run-redfish-simulator.sh
dmtf/mockup_0.99.0a/: Dockerfile  buildImage.sh  redfish-setup.sh  run-redfish-simulator.sh
dmtf/mockup_1.1.0/: Dockerfile  buildImage.sh  httpd-vhosts.conf  httpd.conf  redfish-setup.sh  run-redfish-simulator.sh
doc/: Makefile  README.rst
doc/source/: classesdoc.rst  conf.py  develsetup.rst  faq.rst  further_ref.rst  help.rst  index.rst  installation.rst  python-redfish_lib.rst  redfish-client.rst  testing.rst  usage.rst
doc/source/python-redfish_classes/: config.rst  exception.rst  main.rst  mapping.rst  types.rst
docs/: Redfish_API_Data_Model.md  Redfish_Specification_Documentation.md
examples/: HpRestfulApiExamples.py  __init__.py  redfish.conf  simple-proliant.py  simple-simulator.py  simple.py  walk-chassis.py
examples/docker/: Dockerfile
pbconf/: README.rst  announces3.sql  mkctn  python-redfish.pb  python-redfish.yml
pbconf/pbfilter/: all.pbf  all.yml  centos.pbf  centos.yml  deb.pbf  deb.yml  debian-3.1.pbf  debian-7.0.pbf  debian.yml  fedora-4.pbf  fedora.pbf  fedora.yml  md.pbf  md.yml  novell.pbf  novell.yml  opensuse.pbf  opensuse.yml  pkg.pbf  rpm.pbf  rpm.yml  sles.yml  ubuntu-12.04.yml  ubuntu-7.04.pbf  ubuntu-8.10.pbf  ubuntu-9.04.pbf  ubuntu.pbf  ubuntu.yml
pbconf/python-redfish/: pbcl
pbconf/python-redfish/deb/: changelog  control  copyright  python-redfish-data.dirs  python-redfish-data.install  python-redfish.docs  rules
pbconf/python-redfish/pkg/: depend  pbbuild  pkginfo
pbconf/python-redfish/rpm/: python-redfish.spec
python-redfish/: connection.py
redfish/: __init__.py  config.py  connection.py  exception.py  exceptions.py  functions.py  main.py  mapping.py  redfish-functions.py  server.py  standard.py  types.py
redfish-client/: redfish-check-cartridge  redfish-check-cartridge_usage.txt  redfish-client  redfish-client.py  redfish-client_usage.txt  rfclient.py
redfish-client/config/: config.py
redfish-client/etc/: redfish-client.conf
redfish-client/etc/bash_completion.d/: redfish-client.bash
redfish-client/local-checks/: Dockerfile.fedora  check_client.py
redfish-client/templates/: bla.templates  chassis_info.template  manager_info.template  serial_info.template  system_info.template
redfish-client/tests/: Dockerfile.debian  Dockerfile.fedora  Dockerfile.fedorap3  Dockerfile.fedorapip  Dockerfile.p2-debian-8  Dockerfile.p2-fedora-25  Dockerfile.p2-ubuntu-16.04  Dockerfile.p2pip-fedora-25  Dockerfile.p3-fedora-25  Dockerfile.ubuntu  centos-7-src-p2.dkf  test_client.py
redfish/oem/: __init__.py  hpe.py
redfish/old/: types.py
redfish/tests/: __init__.py  test_redfish.py
redfish/tests/fakes/: connection_fakes.py  system_fakes.py
redfish/tests/unit/: test_redfish.py  test_systems.py
