[metadata]
name = python-redfish
summary = Reference implementation of Redfish standard client.
description-file =
    README.rst
author = Redfish dev team
author-email = python-redfish@lists.mondorescue.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    redfish

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = redfish/locale
domain = python-redfish

[update_catalog]
domain = python-redfish
output_dir = redfish/locale
input_file = redfish/locale/python-redfish.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = redfish/locale/python-redfish.pot
