[metadata]
name = python-redfish
summary = Reference implementation of Redfish standard client.
description-file =
    README.rst
author = Redfish dev team
author-email = python-redfish@mondorescue.org
home-page = https://github.com/uggla/python-redfish/tree/devel
license = Apache-2
classifier =
	Development Status :: 4 - Beta
		Environment :: Console
		Intended Audience :: Information Technology
		Intended Audience :: System Administrators
		License :: OSI Approved :: Apache Software License
		Operating System :: POSIX :: Linux
		Programming Language :: Python
		Programming Language :: Python :: 2
		Programming Language :: Python :: 2.7
		Programming Language :: Python :: 3
		Programming Language :: Python :: 3.4

[files]
packages =
   redfish

scripts =
	redfish-client/redfish-client

data_files =
	usr/share/redfish-client/templates = redfish-client/templates/*
	etc/ = redfish-client/etc/*


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

#[compile_catalog]
#directory = redfish/locale
#domain = python-redfish

#[update_catalog]
#domain = python-redfish
#output_dir = redfish/locale
#input_file = redfish/locale/python-redfish.pot

#[extract_messages]
#keywords = _ gettext ngettext l_ lazy_gettext
#mapping_file = babel.cfg
#output_file = redfish/locale/python-redfish.pot
